--- a/app/src/main/res/layout/activity_interesting_facts.xml
+++ b/app/src/main/res/layout/activity_interesting_facts.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".InterestingFactsActivity"
     android:background="#ff51b46d"
-
+    android:id="@+id/funFactLayout"
     >
 
     <TextView
@@ -36,7 +36,9 @@
         android:id="@+id/showFactButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@android:color/white"/>
+        android:background="@android:color/white"
+        android:textColor="#ff51b46d"
+        />
 
 
 </RelativeLayout>
